@@ -30,78 +30,47 @@ import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.ToStringUtils;
 
 /**
- * A query that wraps another query or a filter and simply returns a constant score equal to the
- * query boost for every document that matches the filter or query.
- * For queries it therefore simply strips of all scores and returns a constant one.
+ * A query that wraps another query and simply returns a constant score equal to the
+ * query boost for every document that matches the query.
+ * It therefore simply strips of all scores and returns a constant one.
  */
 public class ConstantScoreQuery extends Query {
-  protected final Filter filter;
   protected final Query query;
 
   /** Strips off scores from the passed in Query. The hits will get a constant score
    * dependent on the boost factor of this query. */
   public ConstantScoreQuery(Query query) {
-    if (query == null)
-      throw new NullPointerException("Query may not be null");
-    this.filter = null;
     this.query = query;
   }
 
-  /** Wraps a Filter as a Query. The hits will get a constant score
-   * dependent on the boost factor of this query.
-   * If you simply want to strip off scores from a Query, no longer use
-   * {@code new ConstantScoreQuery(new QueryWrapperFilter(query))}, instead
-   * use {@link #ConstantScoreQuery(Query)}!
-   */
-  public ConstantScoreQuery(Filter filter) {
-    if (filter == null)
-      throw new NullPointerException("Filter may not be null");
-    this.filter = filter;
-    this.query = null;
-  }
-
-  /** Returns the encapsulated filter, returns {@code null} if a query is wrapped. */
-  public Filter getFilter() {
-    return filter;
-  }
-
-  /** Returns the encapsulated query, returns {@code null} if a filter is wrapped. */
+  /** Returns the encapsulated query. */
   public Query getQuery() {
     return query;
   }
 
   @Override
   public Query rewrite(IndexReader reader) throws IOException {
-    if (query != null) {
-      Query rewritten = query.rewrite(reader);
-      if (rewritten != query) {
-        rewritten = new ConstantScoreQuery(rewritten);
-        rewritten.setBoost(this.getBoost());
-        return rewritten;
-      }
-    } else {
-      assert filter != null;
-      // Fix outdated usage pattern from Lucene 2.x/early-3.x:
-      // because ConstantScoreQuery only accepted filters,
-      // QueryWrapperFilter was used to wrap queries.
-      if (filter instanceof QueryWrapperFilter) {
-        final QueryWrapperFilter qwf = (QueryWrapperFilter) filter;
-        final Query rewritten = new ConstantScoreQuery(qwf.getQuery().rewrite(reader));
-        rewritten.setBoost(this.getBoost());
-        return rewritten;
-      }
+    Query sub = query;
+    if (sub instanceof QueryWrapperFilter) {
+      sub = ((QueryWrapperFilter) sub).getQuery();
+    }
+    Query rewritten = sub.rewrite(reader);
+    if (rewritten != query) {
+      rewritten = new ConstantScoreQuery(rewritten);
+      rewritten.setBoost(this.getBoost());
+      return rewritten;
     }
     return this;
   }
 
   @Override
   public void extractTerms(Set<Term> terms) {
-    // TODO: OK to not add any terms when wrapped a filter
-    // and used with MultiSearcher, but may not be OK for
-    // highlighting.
-    // If a query was wrapped, we delegate to query.
-    if (query != null)
+    // NOTE: ConstantScoreQuery used to wrap either a query or a filter. Now
+    // that filter extends Query, we need to only extract terms when the query
+    // is not a filter if we do not want to hit an UnsupportedOperationException
+    if (query instanceof Filter == false) {
       query.extractTerms(terms);
+    }
   }
 
   protected class ConstantWeight extends Weight {
@@ -111,13 +80,13 @@ public class ConstantScoreQuery extends Query {
     
     public ConstantWeight(IndexSearcher searcher) throws IOException {
       super(ConstantScoreQuery.this);
-      this.innerWeight = (query == null) ? null : query.createWeight(searcher, false);
+      this.innerWeight = query.createWeight(searcher, false);
     }
 
     @Override
     public float getValueForNormalization() throws IOException {
       // we calculate sumOfSquaredWeights of the inner weight, but ignore it (just to initialize everything)
-      if (innerWeight != null) innerWeight.getValueForNormalization();
+      innerWeight.getValueForNormalization();
       queryWeight = getBoost();
       return queryWeight * queryWeight;
     }
@@ -127,46 +96,25 @@ public class ConstantScoreQuery extends Query {
       this.queryNorm = norm * topLevelBoost;
       queryWeight *= this.queryNorm;
       // we normalize the inner weight, but ignore it (just to initialize everything)
-      if (innerWeight != null) innerWeight.normalize(norm, topLevelBoost);
+      innerWeight.normalize(norm, topLevelBoost);
     }
 
     @Override
     public BulkScorer bulkScorer(LeafReaderContext context, Bits acceptDocs) throws IOException {
-      if (filter != null) {
-        assert query == null;
-        return super.bulkScorer(context, acceptDocs);
-      } else {
-        assert query != null && innerWeight != null;
-        BulkScorer bulkScorer = innerWeight.bulkScorer(context, acceptDocs);
-        if (bulkScorer == null) {
-          return null;
-        }
-        return new ConstantBulkScorer(bulkScorer, this, queryWeight);
+      BulkScorer bulkScorer = innerWeight.bulkScorer(context, acceptDocs);
+      if (bulkScorer == null) {
+        return null;
       }
+      return new ConstantBulkScorer(bulkScorer, this, queryWeight);
     }
 
     @Override
     public Scorer scorer(LeafReaderContext context, Bits acceptDocs) throws IOException {
-      if (filter != null) {
-        assert query == null;
-        final DocIdSet dis = filter.getDocIdSet(context, acceptDocs);
-        if (dis == null) {
-          return null;
-        }
-        final DocIdSetIterator disi = dis.iterator();
-        if (disi == null)
-          return null;
-        return new ConstantDocIdSetIteratorScorer(disi, this, queryWeight);
-      } else {
-        assert query != null && innerWeight != null;
-        Scorer scorer = innerWeight.scorer(context, acceptDocs);
-        if (scorer == null) {
-          return null;
-        }
-        return new ConstantScoreScorer(scorer, queryWeight);
+      Scorer scorer = innerWeight.scorer(context, acceptDocs);
+      if (scorer == null) {
+        return null;
       }
-
-
+      return new ConstantScoreScorer(scorer, queryWeight);
     }
 
     @Override
@@ -247,11 +195,7 @@ public class ConstantScoreQuery extends Query {
 
     @Override
     public Collection<ChildScorer> getChildren() {
-      if (query != null) {
-        return Collections.singletonList(new ChildScorer(in, "constant"));
-      } else {
-        return Collections.emptyList();
-      }
+      return Collections.singletonList(new ChildScorer(in, "constant"));
     }
   }
 
@@ -334,7 +278,7 @@ public class ConstantScoreQuery extends Query {
   @Override
   public String toString(String field) {
     return new StringBuilder("ConstantScore(")
-      .append((query == null) ? filter.toString() : query.toString(field))
+      .append(query.toString(field))
       .append(')')
       .append(ToStringUtils.boost(getBoost()))
       .toString();
@@ -347,17 +291,14 @@ public class ConstantScoreQuery extends Query {
       return false;
     if (o instanceof ConstantScoreQuery) {
       final ConstantScoreQuery other = (ConstantScoreQuery) o;
-      return 
-        ((this.filter == null) ? other.filter == null : this.filter.equals(other.filter)) &&
-        ((this.query == null) ? other.query == null : this.query.equals(other.query));
+      return this.query.equals(other.query);
     }
     return false;
   }
 
   @Override
   public int hashCode() {
-    return 31 * super.hashCode() +
-      ((query == null) ? filter : query).hashCode();
+    return 31 * super.hashCode() + query.hashCode();
   }
 
 }
