@@ -116,7 +116,7 @@ public abstract class DocTermOrdsRangeFilter extends Filter {
   }
   
   @Override
-  public final String toString() {
+  public final String toString(String defaultField) {
     final StringBuilder sb = new StringBuilder(field).append(":");
     return sb.append(includeLower ? '[' : '{')
       .append((lowerVal == null) ? "*" : lowerVal.toString())
