@@ -159,7 +159,7 @@ public class BooleanFilter extends Filter implements Iterable<FilterClause> {
   
   /** Prints a user-readable version of this Filter. */
   @Override
-  public String toString() {
+  public String toString(String field) {
     final StringBuilder buffer = new StringBuilder("BooleanFilter(");
     final int minLen = buffer.length();
     for (final FilterClause c : clauses) {
